Remove Bootstrap 3 interop styles, fix collapsable elements (bsc#1239795) (#10046)

--- a/web/html/src/branding/css/base/theme.scss
+++ b/web/html/src/branding/css/base/theme.scss
@@ -176,6 +176,8 @@ section {
 }
 
 .navbar-collapse {
+  animation: none !important;
+  transition: none !important;
   display: flex;
   flex-direction: column;
 
@@ -196,14 +198,6 @@ section {
         margin: 0 !important;
       }
     }
-  }
-
-  &.in {
-    display: flex !important;
-  }
-
-  &.collapse {
-    display: none !important;
   }
 }
 
